test(fileupload): update integration and architecture tests for submission DTOs